--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 <script src="./Block.js"></script>
 <script src="./chain.js"></script>
 <script src="./ground.js"></script>
-<script src="./Player.js"></script>
+<script src="./pentagon.js"></script>
+
+
+
+
 
 <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
